# oholeo_keyboard_software

./: ..gitignore.~undo-tree~  .Cargo.toml.~undo-tree~  .README.md.~undo-tree~  .index.html.~undo-tree~  .temp.~undo-tree~  Cargo.toml  Cargo.toml~  README.md  index.html  index.html~  package-lock.json  styles.css  styles.css~  tailwind.config.js
src/: #app.rs#  .app.rs.~undo-tree~  .bootstrap.rs.~undo-tree~  .component.rs.~undo-tree~  .components.rs.~undo-tree~  .keyboard.rs.~undo-tree~  .main.rs.~undo-tree~  app.rs  app.rs~  component.rs  component.rs~  keyboard.rs  keyboard.rs~  main.rs
src-tauri/: .tauri.conf.json.~undo-tree~  Cargo.toml  tauri.conf.json  tauri.conf.json~
src-tauri/results/: keyboard.json
src-tauri/src/: #main.rs#  .#main.rs  .main.rs.~undo-tree~  main.rs
style/: output.css
